<resources>
    <string name="app_name">European Championships</string>

    <string name="home">Home</string>
    <string name="favorites">Favorite teams</string>
    <string name="championships">Championships</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favorite_teams">FavoriteTeams</string>
    <string name="title_activity_team">Team</string>
    <string name="ranking">Ranking</string>
    <string name="composition">Composition</string>
    <string name="teamName">Team name</string>
    <string name="title_activity_composition">Composition</string>

    <string name="colNumber">Number</string>
    <string name="colPos">Position</string>
    <string name="colName">Full name</string>
    <string name="colAge">Age</string>
    <string name="title_activity_championships">Championships</string>

    <string name="hello_world">Hello world!</string>
    <string name="Allemagne">Bundesliga</string>
    <string name="PaysBas">Eredivisie</string>
    <string name="France">Ligue 1</string>
    <string name="Angleterre">Premier League</string>
    <string name="Portugal">Primeira Liga</string>
    <string name="Espagne">Primera division</string>
    <string name="Italie">Serie A</string>


</resources>
