<TableLayout
    android:id="@+id/tableCompo"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="0, 1, 2, 3"
    android:orientation="vertical"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp">

    <TableRow android:layout_margin="1dp"
        android:layout_gravity="center_horizontal">
        <TextView android:text="@string/colName"
            android:layout_column="0"
            android:gravity="center"/>
        <TextView android:text="@string/colNumber"
            android:layout_column="1"
            android:gravity="center"/>
        <TextView android:text="@string/colPos"
            android:layout_column="2"
            android:layout_gravity="center"/>
        <TextView android:text="@string/colAge"
            android:layout_column="3"
            android:layout_gravity="center"/>
    </TableRow>

</TableLayout>
