<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/teamName"
        android:id="@+id/teamName"
        android:textSize="30sp"
        android:layout_marginTop="68dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonRanking"
        android:layout_alignEnd="@+id/buttonRanking" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="@string/ranking"
        android:id="@+id/buttonRanking"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ranking"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:gravity="top|center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="@string/composition"
        android:id="@+id/buttonComposition"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/buttonRanking"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="@drawable/field"
        android:gravity="top|center_horizontal"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:background="@drawable/logo"
        android:layout_alignBottom="@+id/teamName"
        android:layout_alignLeft="@+id/buttonRanking"
        android:layout_alignStart="@+id/buttonRanking" />

</RelativeLayout>
